--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/gradient_bg"
+    android:background="@drawable/ssk_app_bg"
     tools:context="tv.sportssidekick.sportssidekick.activity.LoungeActivity">
 
     <View
