--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -174,6 +174,7 @@
             android:background="@color/green_dark_2"
             android:gravity="start|center_vertical"
             android:hint="Enter your message here."
+            android:imeOptions="flagNoExtractUi"
             android:maxLines="5"
             android:padding="8dp"
             android:textColor="@color/white"
