--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -11,77 +11,59 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_centerHorizontal="true" />
+
+
     <TextView
+        android:id="@+id/create_a_chat"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:gravity="center"
-        android:text="Create Chat"
-        android:textColor="@color/colorAccent" />
-
-    <TextView
-        android:id="@+id/join_a_chat"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
         android:background="@color/colorAccentLight"
         android:gravity="center"
-        android:text="Join Chat"
+        android:text="Create Chat"
         android:textColor="@color/white_semitransparent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_toEndOf="@+id/top_vertical_spliter"
+        android:gravity="center"
+        android:text="Join Chat"
+        android:textColor="@color/colorAccent" />
 
 
     <View
         android:layout_width="match_parent"
         android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:background="@color/colorAccent"
-        android:layout_alignParentTop="true"
-        android:layout_height="2dp"
-        android:layout_centerHorizontal="true" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
         android:background="@color/colorPrimaryLight"
         android:layout_alignParentTop="true"
         android:layout_height="2dp"
         android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/chat_name_label"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_below="@+id/top_vertical_spliter"
-        android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:background="@color/colorPrimary"
-        android:foregroundGravity="right"
-        android:gravity="center_vertical|end"
-        android:paddingEnd="70dp"
-        android:text="Chat name"
-        android:textColor="@color/white" />
+        android:layout_toEndOf="@+id/top_vertical_spliter"
+        android:background="@color/colorAccent"
+        android:layout_alignParentTop="true"
+        android:layout_height="2dp"
+        android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:id="@+id/chat_name_edit_text"
+    <View
+        android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
         android:layout_below="@+id/top_vertical_spliter"
-        android:layout_marginStart="-30dp"
-        android:layout_toEndOf="@+id/chat_name_label"
-        android:background="@color/green_dark_2"
-        android:gravity="start|center_vertical"
-        android:hint="Enter a name for your chat"
-        android:imeOptions="flagNoExtractUi"
-        android:maxLines="1"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_semitransparent"
-        android:textSize="14sp" />
+        android:layout_height="1dp"
+        android:background="@android:color/black"/>
 
     <TextView
         android:id="@+id/caption_label"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/chat_name_label"
         android:gravity="center"
-        android:text="Add friends to chat"
-        android:textColor="@color/white" />
+        android:text="Public Chats"
+        android:textColor="@color/white"
+        android:layout_below="@+id/top_vertical_spliter"
+        android:layout_alignParentStart="true" />
+
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
@@ -106,10 +88,9 @@
         android:layout_marginBottom="60dp"
         android:layout_height="1dp"
         android:background="@android:color/black"/>
-
     <EditText
         android:id="@+id/search_edit_text"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="60dp"
         android:paddingStart="40dp"
         android:layout_toStartOf="@+id/private_chat_switch"
@@ -118,34 +99,12 @@
         android:inputType="text"
         android:background="@color/green_dark_2"
         android:gravity="start|center_vertical"
-        android:hint="Search for a member"
+        android:hint="Search for a chat"
         android:imeOptions="flagNoExtractUi|actionSearch"
         android:maxLines="1"
         android:textColor="@color/white"
         android:textColorHint="@color/white_semitransparent"
         android:textSize="14sp" />
-
-    <Switch
-        android:id="@+id/private_chat_switch"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_toStartOf="@+id/private_chat_label"
-        android:layout_width="80dp"
-        android:layout_height="60dp"/>
-
-    <TextView
-        android:id="@+id/private_chat_label"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_height="60dp"
-        android:layout_toStartOf="@+id/confirm_button"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="This chat is PRIVATE"
-        android:textColor="@color/white" />
-
     <Button
         android:id="@+id/confirm_button"
         android:layout_width="70dp"
@@ -157,5 +116,4 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         />
-
 </RelativeLayout>
