News fragment, News Item fragment

--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="login_logo_ssk">15dp</dimen>
     <dimen name="half_margin">4dp</dimen>
     <dimen name="full_margin">8dp</dimen>
+    <dimen name="padding_8">8dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="padding_16">16dp</dimen>
+
+
 </resources>
