--- a/SportsSideKick/app/src/main/res/layout/fragment_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_rumours.xml
@@ -1,17 +1,219 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.RumoursFragment"
-    android:background="@color/demo_green_semitransparent">
+    android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/fragment_rumors_top_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/fragment_rumors_top_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/img_rumours_top_image" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="RUMOURS"
+            android:textColor="@color/white"
+            android:textSize="28sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/fragment_rumors_all_single_rumours_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="36sp"
-        android:textColor="@color/white"
-        android:layout_centerInParent="true"
-        android:text="@string/rumors_fragment_caption" />
+        android:padding="@dimen/padding_16"
+        android:layout_below="@+id/fragment_rumors_top_container"
+        android:layout_alignParentStart="true">
 
+        <View
+            android:id="@+id/fragment_rumors_divider"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true" />
+
+        <RelativeLayout
+            android:id="@+id/fragment_rumors_single_rumour_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/fragment_rumors_divider"
+            android:layout_alignParentStart="true"
+            android:background="@color/colorPrimary"
+            android:layout_marginEnd="@dimen/margin_8"
+            android:layout_marginBottom="@dimen/margin_8">
+
+            <com.github.rongi.rotate_layout.layout.RotateLayout
+                android:id="@+id/fragment_rumors_single_rumour_headline_container_1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/fragment_rumors_single_rumour_info_container_1"
+                app:angle="90"> <!-- Specify rotate angle here -->
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_headline_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/single_rumour_headline"
+                    android:gravity="center"
+                    android:padding="@dimen/padding_8"
+                    android:text="RUMOUR"
+                    android:textColor="@color/colorPrimary" />
+            </com.github.rongi.rotate_layout.layout.RotateLayout>
+
+            <RelativeLayout
+                android:id="@+id/fragment_rumors_single_rumour_info_container_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/fragment_rumors_single_rumour_headline_container_1">
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_info_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:padding="@dimen/padding_8"
+                    android:text="Champions League predictions: Leicester Club Brugge..."
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_time_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/fragment_rumors_single_rumour_info_1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:padding="@dimen/padding_8"
+                    android:singleLine="true"
+                    android:text="12 mins"
+                    android:textColor="@color/colorAccent" />
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/fragment_rumors_single_rumour_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignStart="@+id/fragment_rumors_divider"
+            android:background="@color/colorPrimary"
+            android:layout_marginStart="@dimen/margin_8"
+            android:layout_marginBottom="@dimen/margin_8">
+
+            <com.github.rongi.rotate_layout.layout.RotateLayout
+                android:id="@+id/fragment_rumors_single_rumour_headline_container_2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/fragment_rumors_single_rumour_info_container_2"
+                app:angle="90"> <!-- Specify rotate angle here -->
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_headline_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/single_rumour_headline"
+                    android:gravity="center"
+                    android:padding="@dimen/padding_8"
+                    android:text="RUMOUR"
+                    android:textColor="@android:color/black" />
+            </com.github.rongi.rotate_layout.layout.RotateLayout>
+
+            <RelativeLayout
+                android:id="@+id/fragment_rumors_single_rumour_info_container_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/fragment_rumors_single_rumour_headline_container_2">
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_info_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:padding="@dimen/padding_8"
+                    android:text="Champions League predictions: Leicester Club Brugge..."
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_time_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/fragment_rumors_single_rumour_info_2"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:padding="@dimen/padding_8"
+                    android:text="12 mins"
+                    android:textColor="@color/colorAccent" />
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/fragment_rumors_single_rumour_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/fragment_rumors_divider"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/fragment_rumors_single_rumour_1"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="@dimen/margin_8"
+            android:layout_marginEnd="@dimen/margin_8">
+
+            <com.github.rongi.rotate_layout.layout.RotateLayout
+                android:id="@+id/fragment_rumors_single_rumour_headline_container_3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/fragment_rumors_single_rumour_info_container_3"
+                app:angle="90"> <!-- Specify rotate angle here -->
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_headline_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/single_rumour_headline"
+                    android:gravity="center"
+                    android:padding="@dimen/padding_8"
+                    android:text="RUMOUR"
+                    android:textColor="@android:color/black" />
+            </com.github.rongi.rotate_layout.layout.RotateLayout>
+
+            <RelativeLayout
+                android:id="@+id/fragment_rumors_single_rumour_info_container_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/fragment_rumors_single_rumour_headline_container_3">
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_info_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:padding="@dimen/padding_8"
+                    android:text="Champions League predictions: Leicester Club Brugge..."
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/fragment_rumors_single_rumour_time_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/fragment_rumors_single_rumour_info_3"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:padding="@dimen/padding_8"
+                    android:singleLine="true"
+                    android:text="12 mins"
+                    android:textColor="@color/colorAccent" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
