--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -4,60 +4,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="60dp"
     android:layout_height="wrap_content"
+    android:background="@color/colorAccentLight"
     >
 
-    <LinearLayout
-        android:id="@+id/container"
+    <ImageView
+        android:id="@+id/image"
+        android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:padding="8dp"
-        android:orientation="horizontal">
+        android:background="@color/demo_green_semitransparent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/profile_image_1"
-                android:scaleType="centerCrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/demo_green_semitransparent" />
 
-            <ImageView
-                android:id="@+id/profile_image_2"
-                android:layout_width="match_parent"
-                android:scaleType="centerCrop"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/demo_red_semitransparent" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-         android:id="@+id/second_container"   android:orientation="vertical">
-            <ImageView
-                android:id="@+id/profile_image_3"
-                android:layout_width="match_parent"
-                android:scaleType="centerCrop"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/demo_blue_semitransparent" />
-
-            <ImageView
-                android:id="@+id/profile_image_4"
-                android:layout_width="match_parent"
-                android:scaleType="centerCrop"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/demo_yellow_semitransparent" />
-        </LinearLayout>
-    </LinearLayout>
 
     <ImageView
         android:layout_width="60dp"
@@ -78,7 +38,7 @@
         android:src="@mipmap/chat_head_selected"/>
 
     <TextView
-        android:layout_below="@+id/container"
+        android:layout_below="@+id/image"
         android:id="@+id/caption"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
