--- a/SportsSideKick/app/src/main/res/layout/popup_manage_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_manage_chat.xml
@@ -1,43 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"  android:layout_width="544dp"
+    android:layout_width="544dp"
     android:layout_height="match_parent"
-
     android:background="@color/colorPrimarySemiLight"
     android:orientation="vertical">
-
     <View
         android:id="@+id/top_vertical_spliter"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_centerHorizontal="true" />
     <TextView
+        android:id="@+id/top_caption"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_toStartOf="@+id/top_vertical_spliter"
         android:gravity="center"
-        android:text="Create Chat"
         android:textColor="@color/colorAccent" />
 
-    <TextView
-        android:id="@+id/join_a_chat"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
-        android:background="@color/colorAccentLight"
-        android:gravity="center"
-        android:text="Join Chat"
-        android:textColor="@color/white_semitransparent" />
     <View
         android:layout_width="match_parent"
-        android:layout_toStartOf="@+id/top_vertical_spliter"
         android:background="@color/colorAccent"
         android:layout_alignParentTop="true"
         android:layout_height="2dp"
         android:layout_centerHorizontal="true" />
     <View
         android:layout_width="match_parent"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
+        android:layout_toEndOf="@+id/top_caption"
         android:background="@color/colorPrimaryLight"
         android:layout_alignParentTop="true"
         android:layout_height="2dp"
@@ -47,25 +34,25 @@
         android:id="@+id/chat_name_label"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/top_vertical_spliter"
+        android:layout_below="@+id/top_caption"
         android:layout_toStartOf="@+id/top_vertical_spliter"
         android:background="@color/colorPrimary"
         android:foregroundGravity="right"
         android:gravity="center_vertical|end"
         android:paddingEnd="70dp"
-        android:text="Chat name"
+        android:text="Rename your chat"
         android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/chat_name_edit_text"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/top_vertical_spliter"
+        android:layout_below="@+id/top_caption"
         android:layout_marginStart="-30dp"
         android:layout_toEndOf="@+id/chat_name_label"
         android:background="@color/green_dark_2"
         android:gravity="start|center_vertical"
-        android:hint="Enter a name for your chat"
+        android:hint="Enter new name of chat here"
         android:imeOptions="flagNoExtractUi"
         android:maxLines="1"
         android:textColor="@color/white"
@@ -78,7 +65,7 @@
         android:layout_height="40dp"
         android:layout_below="@+id/chat_name_label"
         android:gravity="center"
-        android:text="Add friends to chat"
+        android:text="People in this chat"
         android:textColor="@color/white" />
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -105,30 +92,12 @@
         android:layout_height="1dp"
         android:background="@android:color/black"/>
 
-    <EditText
-        android:id="@+id/search_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingStart="40dp"
-        android:layout_toStartOf="@+id/private_chat_switch"
-        android:lines="1"
-        android:layout_alignParentBottom="true"
-        android:inputType="text"
-        android:background="@color/green_dark_2"
-        android:gravity="start|center_vertical"
-        android:hint="Search for a member"
-        android:imeOptions="flagNoExtractUi|actionSearch"
-        android:maxLines="1"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_semitransparent"
-        android:textSize="14sp" />
-
     <Switch
         android:id="@+id/private_chat_switch"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_toStartOf="@+id/private_chat_label"
+        android:layout_alignParentStart="true"
         android:layout_width="80dp"
         android:layout_height="60dp"/>
 
@@ -139,7 +108,7 @@
         android:layout_marginEnd="10dp"
         android:layout_alignParentBottom="true"
         android:layout_height="60dp"
-        android:layout_toStartOf="@+id/confirm_button"
+        android:layout_toEndOf="@+id/private_chat_switch"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="@color/white" />
 
