--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -9,73 +9,83 @@
 
     <ImageView
         android:id="@+id/image"
-        android:scaleType="centerCrop"
-        android:layout_alignParentTop="true"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/demo_green_semitransparent"
         android:padding="8dp"
-        android:background="@color/demo_green_semitransparent" />
+        android:scaleType="centerCrop" />
 
 
 
 
     <ImageView
+        android:id="@+id/mask"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
-        android:scaleType="centerCrop"
-        android:id="@+id/mask"
         android:layout_centerInParent="true"
+        android:scaleType="centerCrop"
         android:src="@mipmap/chat_head_mask"/>
     <ImageView
         android:id="@+id/selected"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
-        android:visibility="gone"
-        android:scaleType="centerCrop"
         android:layout_centerInParent="true"
-        android:src="@mipmap/chat_head_selected"/>
+        android:scaleType="centerCrop"
+        android:src="@mipmap/chat_head_selected"
+        android:visibility="gone"/>
+
+    <ImageView
+        android:id="@+id/notification_icon"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
+        android:src="@mipmap/chat_head_notification"
+        android:visibility="gone" />
 
     <TextView
-        android:layout_below="@+id/image"
         android:id="@+id/caption"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/image"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
         android:maxLines="2"
         android:text="Demo caption Demo caption Demo caption Demo caption"
-        android:gravity="center"
-        android:textSize="9sp"
         android:textColor="@color/white"
+        android:textSize="9sp"
         />
     <ImageView
         android:id="@+id/people_icon"
         android:layout_width="15dp"
-        android:layout_below="@+id/caption"
-    android:layout_centerHorizontal="true"
-        android:src="@mipmap/user_count_icon"
-        android:layout_height="15dp" />
+        android:layout_height="15dp"
+    android:layout_below="@+id/caption"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/user_count_icon" />
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/people_count_value"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/people_icon"
         android:layout_toEndOf="@+id/people_icon"
-        android:textSize="12sp"
+        android:text="3"
         android:textColor="@color/white"
-        android:text="3"/>
+        android:textSize="12sp"/>
     <TextView
         android:id="@+id/edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:textSize="11sp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/people_icon"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="6dp"
+        android:text="Edit"
         android:textColor="@color/colorAccent"
-        android:text="Edit"/>
+        android:textSize="11sp"/>
 
 
 
