--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -3,13 +3,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="tv.sportssidekick.sportssidekick.fragment.instance.WallFragment"
-    android:background="@color/demo_green_semitransparent">
+    android:background="@color/colorAccentLight">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="36sp"
-        android:textColor="@color/white"
-        android:layout_centerInParent="true"
-        android:text="@string/wall_fragment_caption" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_wall_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/fragment_wall_bottom_bar"/>
+
+    <RelativeLayout
+        android:id="@+id/fragment_wall_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/fragment_wall_new_post"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/wall_new_post_selector"
+            android:layout_marginStart="@dimen/padding_16"
+            android:layout_marginEnd="@dimen/padding_8"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            android:id="@+id/fragment_wall_notification"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/wall_notification_selector"
+            android:layout_toEndOf="@id/fragment_wall_new_post"
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_marginEnd="@dimen/padding_8"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            android:id="@+id/fragment_wall_filter"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/wall_filter_selector"
+            android:layout_toEndOf="@id/fragment_wall_notification"
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_marginEnd="@dimen/padding_8"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            android:id="@+id/fragment_wall_following"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/wall_following_selector"
+            android:layout_toEndOf="@id/fragment_wall_filter"
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_marginEnd="@dimen/padding_8"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            android:id="@+id/fragment_wall_search"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/wall_search_selector"
+            android:layout_toEndOf="@id/fragment_wall_following"
+            android:layout_marginStart="@dimen/padding_8"
+            android:layout_marginEnd="@dimen/padding_16"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            android:id="@+id/fragment_wall_full_screen"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_fullscreen"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="@dimen/padding_16"
+            android:layout_marginEnd="@dimen/padding_16"/>
+
+    </RelativeLayout>
+
 </RelativeLayout>
