--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -21,4 +21,8 @@
     <color name="demo_red_semitransparent">#56ff0000</color>
     <color name="black_transparent_154">#9a000000</color>
     <color name="facebook_blue">#3b5998</color>
+
+    <color name="wall_comment_color">#4d4e4c</color>
+    <color name="wall_shop_description_background">#f6f7fa</color>
+    <color name="wall_shop_description_text_color">#0be5ff</color>
 </resources>
