--- a/SportsSideKick/app/src/main/res/layout/news_list_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/news_list_item.xml
@@ -5,7 +5,9 @@
 <ImageView
     android:id="@+id/image"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:scaleType="centerCrop"
+    android:src="@drawable/sporting_logo"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
