--- a/SportsSideKick/app/src/main/res/layout/row_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_rumours.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/row_rumors_time"
@@ -15,6 +15,7 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:maxLines="1"
+        android:text="time"
         android:textColor="@color/colorAccent"/>
 
     <TextView
