--- a/SportsSideKick/app/src/main/res/layout/chat_member_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_member_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/profile_image_container"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
