--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -9,7 +9,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:id="@+id/profile_image"
+        android:id="@+id/profile_image_container"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
