--- a/SportsSideKick/app/src/main/res/layout/user_stats_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/user_stats_item.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:background="@color/black"
-    android:layout_height="wrap_content">
-<TextView
-    android:id="@+id/caption"
-    android:text="Caption"
-    android:gravity="right"
-    android:layout_margin="10dp"
-    android:textColor="@color/colorAccent"
-    android:layout_weight="1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/caption"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:ellipsize="end"
+        android:gravity="right"
+        android:lines="1"
+        android:text="Caption"
+        android:textColor="@color/white" />
+
     <TextView
         android:id="@+id/value"
-        android:layout_weight="3"
-        android:layout_marginStart="15dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/white"
-        android:text="Value"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="15dp"
+        android:layout_weight="3"
+        android:ellipsize="end"
+        android:gravity="center_vertical"
+        android:lines="1"
+        android:text="Value"
+        android:textColor="@color/colorAccent" />
 </LinearLayout>
