--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -56,4 +56,8 @@
         <item name="android:textColorHint">@color/lightGrey</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+
+    <style name="boldText">
+        <item name="fontPath">fonts/TitilliumWeb-Bold.ttf</item>
+    </style>
 </resources>
